created news file in auth and added imagepost to post

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
+  overflow:hidden;
+
 }
+
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +38,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.bodytext{
+  position:relative;
+  
 }
